# fatint-thesis

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  build-thesis.sh  editorconfig  model.nlogo  pom.xml  requirements.txt  run-simulations.sh
.github/workflows/: build-thesis.yml  lint-cpp.yml  test-cpp-cli.yml  test-cpp.yml
docs/: REQUIREMENTS.md
fatint-cpp/: .clang-tidy  CMakeLists.txt
fatint-cpp/libs/libfatint/: CMakeLists.txt
fatint-cpp/libs/libfatint/include/genetics/: GeneticReproduction.hpp  GeneticsImpl.hpp  genetics.hpp
fatint-cpp/libs/libfatint/include/io/: CSVWriter.hpp  IOutputWriter.hpp  SVGWriter.hpp
fatint-cpp/libs/libfatint/include/math/: Random.hpp  Statistics.hpp  types.hpp
fatint-cpp/libs/libfatint/include/measurement/: DepthFirstSearchSpeciesCounter.hpp  DisjointSetsSpeciesCounter.hpp  ReservoirSampling.hpp  ReservoirSampling.tpp  types.hpp
fatint-cpp/libs/libfatint/include/model/: error.hpp  formulas.hpp  types.hpp  utils.hpp
fatint-cpp/libs/libfatint/include/simulation/: Environment.hpp  Experiment.hpp  Simulator.hpp  types.hpp  utils.hpp
fatint-cpp/libs/libfatint/src/genetics/: GeneticReproduction.cpp  GeneticsImpl.cpp
fatint-cpp/libs/libfatint/src/io/: CSVWriter.cpp  SVGWriter.cpp
fatint-cpp/libs/libfatint/src/math/: Random.cpp  Statistics.cpp
fatint-cpp/libs/libfatint/src/measurement/: DepthFirstSearchSpeciesCounter.cpp  DisjointSetsSpeciesCounter.cpp
fatint-cpp/libs/libfatint/src/model/: types.cpp  utils.cpp
fatint-cpp/libs/libfatint/src/simulation/: Environment.cpp  Experiment.cpp  Simulator.cpp  types.cpp  utils.cpp
fatint-cpp/libs/libfatint/tests/: CMakeLists.txt
fatint-cpp/libs/libfatint/tests/genetics/: TestGeneticsImpl.cpp
fatint-cpp/libs/libfatint/tests/math/: TestRandom.cpp  TestStatistics.cpp
fatint-cpp/libs/libfatint/tests/measurement/: TestDepthFirstSearchSpeciesCounter.cpp  TestDisjointSetsSpeciesCounter.cpp  TestReservoirSampling.cpp
fatint-cpp/libs/libfatint/tests/model/: TestFormulas.cpp  TestUtils.cpp
fatint-cpp/libs/libfatint/tests/performance/: TestSimulatorPerformance.cpp  TestSpeciesCounterPerformance.cpp
fatint-cpp/libs/libfatint/tests/simulation/: TestSimulationUtils.cpp  TestSimulator.cpp
fatint-cpp/src/: main.cpp
fatint-netlogo/: .model.tmp.nlogo  depth-first-search.nls  disjoint-sets.nls  model.nlogo
include/: disjointsets.hpp  population.hpp
notebooks/: fatint.ipynb
notebooks/outputs/: m_limit=0--p_change=0.0005.csv  m_limit=10--p_change=0.0005.csv  m_limit=11--p_change=0.0005.csv  m_limit=12--p_change=0.0005.csv  m_limit=13--p_change=0.0005.csv  m_limit=14--p_change=0.0005.csv  m_limit=16--p_change=0.0005.csv  m_limit=17--p_change=0.0005.csv  m_limit=18--p_change=0.0005.csv  m_limit=19--p_change=0.0005.csv  m_limit=20--p_change=0.0005.csv  m_limit=9--p_change=0.0005.csv  p_change=0.0005.csv  p_change=0.00055.csv  p_change=0.0006.csv  p_change=0.00065.csv  p_change=0.0007.csv  p_change=0.00075.csv  p_change=0.0008.csv  p_change=0.00085.csv  p_change=0.0009.csv  p_change=0.00095.csv  p_crossing=0.0.csv  p_crossing=0.1.csv  p_crossing=0.2.csv  p_crossing=0.3.csv  p_crossing=0.4.csv  p_crossing=0.5.csv  p_crossing=0.6.csv  p_crossing=0.7.csv  p_crossing=0.8.csv  p_encounter=0.05.csv  p_encounter=0.055.csv  p_encounter=0.06.csv  p_encounter=0.065.csv  p_encounter=0.07.csv  p_encounter=0.075.csv  p_encounter=0.08.csv  p_encounter=0.085.csv  p_encounter=0.09.csv  (+26 more)
src/: disjointsets.cpp  main.cpp  population.cpp
src/main/java/hu/hamrik/thesis/: Application.java
src/main/resources/: model.nlogo
thesis/: main.typ  thesis.bib
thesis/assets/diagrams/: cpp_dataflow.puml  cpp_experiment_classes.puml  cpp_simulator_classes.puml  cpp_simulator_params.puml  cpp_simulator_usages.puml  cpp_usecase.puml  netlogo_usecase.puml
thesis/chapters/: introduction.typ
thesis/chapters/compare/: main.typ
thesis/chapters/cpp/: dev_docs.typ  main.typ  user_manual.typ
thesis/chapters/developer_documentation/: cli_spec.typ  main.typ  netlogo_spec.typ  performance.typ
thesis/chapters/introduction/: main.typ  model_description.typ
thesis/chapters/netlogo/: dev_docs.typ  main.typ  user_manual.typ
thesis/chapters/results/: main.typ
thesis/chapters/summary/: main.typ
thesis/chapters/temp/: performance.typ  results.typ
thesis/chapters/user_manual/: cli_manual.typ  main.typ  model_description.typ  netlogo_manual.typ
thesis/data/: NetLogo-default_params.csv  NetLogo-m_limit.csv  NetLogo-p_change.csv  NetLogo-p_crossing.csv  NetLogo-p_encounter.csv  NetLogo-p_mutation-raw.csv  NetLogo-p_mutation.csv  NetLogo-v_stretch.csv  NetLogo_species_counter_perf.csv  benchmark-simulator-churn-NetLogo.csv  benchmark-simulator-churn-NetLogo.raw.csv  benchmark-simulator-churn-libfatint.csv  benchmark-simulator-nochurn-NetLogo.csv  benchmark-simulator-nochurn-NetLogo.raw.csv  benchmark-simulator-nochurn-libfatint.csv  benchmark-species-counter-dfs-many-species-NetLogo.csv  benchmark-species-counter-dfs-many-species-NetLogo.raw.csv  benchmark-species-counter-dfs-many-species-libfatint.csv  benchmark-species-counter-dfs-one-species-NetLogo.csv  benchmark-species-counter-dfs-one-species-NetLogo.raw.csv  benchmark-species-counter-dfs-one-species-libfatint.csv  benchmark-species-counter-ds-many-species-NetLogo.csv  benchmark-species-counter-ds-many-species-NetLogo.raw.csv  benchmark-species-counter-ds-many-species-libfatint.csv  benchmark-species-counter-ds-one-species-NetLogo.csv  benchmark-species-counter-ds-one-species-NetLogo.raw.csv  benchmark-species-counter-ds-one-species-libfatint.csv  default-NetLogo.csv  default-NetLogo.raw.csv  default-libfatint.csv  m_limit-NetLogo.csv  p_change-NetLogo.csv  p_crossing-NetLogo.csv  p_encounter-NetLogo.csv  p_mutation-NetLogo.csv  p_mutation-NetLogo.raw.csv  simulator_churn_perf.csv  simulator_no_churn_perf.csv  species_counter_perf_1.csv  species_counter_perf_2.csv  (+2 more)
thesis/lib/: elteikthesis.typ  plot.typ
